--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
     "date-fns": "^2.30.0",
+    "@typescript-eslint/parser": "^6.8.0",
+    "eslint": "^8.51.0",
+    "eslint-config-next": "^13.5.6",
     "framer-motion": "^10.16.4",
     "next": "^13.5.6",
     "react": "^18",
