--- a/package.json
+++ b/package.json
@@ -10,10 +10,15 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
+    "@typescript-eslint/parser": "^6.8.0",
+    "eslint": "^8.51.0",
+    "eslint-config-next": "^13.5.6",
     "framer-motion": "^10.16.4",
     "next": "13.5.5",
+    "prettier": "^2.8.8",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-placeholder": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^20",
