--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
     "@typescript-eslint/parser": "^6.8.0",
+    "@uiw/codemirror-extensions-langs": "^4.21.20",
+    "@uiw/codemirror-themes": "^4.21.20",
+    "@uiw/react-codemirror": "^4.21.20",
     "eslint": "^8.51.0",
     "eslint-config-next": "^13.5.6",
     "framer-motion": "^10.16.4",
