--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
     "framer-motion": "^10.16.4",
-    "next": "13.5.5",
+    "next": "^13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^4.11.0"
+    "react-icons": "^4.11.0",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@types/node": "^20",
