--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "eslint-config-next": "^13.5.6",
     "framer-motion": "^10.16.4",
     "next": "^13.5.6",
+    "lodash": "^4.17.21",
+    "prettier": "^2.8.8",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
