--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "^8.51.0",
     "eslint-config-next": "^13.5.6",
     "framer-motion": "^10.16.4",
+    "lodash": "^4.17.21",
     "next": "13.5.5",
     "prettier": "^2.8.8",
     "react": "^18",
