--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^2.30.0",
     "@typescript-eslint/parser": "^6.8.0",
     "@uiw/codemirror-extensions-langs": "^4.21.20",
+    "@uiw/codemirror-theme-vscode": "^4.21.20",
     "@uiw/codemirror-themes": "^4.21.20",
     "@uiw/react-codemirror": "^4.21.20",
     "eslint": "^8.51.0",
