--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
+    "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "next": "^13.5.6",
     "react": "^18",
