--- a/package.json
+++ b/package.json
@@ -10,22 +10,23 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
-    "date-fns": "^2.30.0",
     "@typescript-eslint/parser": "^6.8.0",
     "@uiw/codemirror-extensions-langs": "^4.21.20",
     "@uiw/codemirror-theme-vscode": "^4.21.20",
     "@uiw/codemirror-themes": "^4.21.20",
     "@uiw/react-codemirror": "^4.21.20",
+    "date-fns": "^2.30.0",
     "eslint": "^8.51.0",
     "eslint-config-next": "^13.5.6",
     "framer-motion": "^10.16.4",
-    "next": "^13.5.6",
     "lodash": "^4.17.21",
+    "next": "^13.5.6",
     "prettier": "^2.8.8",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
     "react-jazzicon": "^1.0.4",
+    "react-toastify": "^9.1.3",
     "swr": "^2.2.4"
   },
   "devDependencies": {
