--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "redirect-file": "cp _redirects .next/_redirects",
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && yarn redirect-file",
     "start": "next start",
     "lint": "next lint"
   },
