--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-icons": "^4.11.0",
     "react-jazzicon": "^1.0.4",
     "react-toastify": "^9.1.3",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "yaml": "^2.3.3"
   },
   "devDependencies": {
     "@types/node": "^20",
