--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^2.30.0",
     "eslint": "^8.51.0",
     "eslint-config-next": "^13.5.6",
+    "ethers": "^6.8.0",
     "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
     "next": "^13.5.6",
@@ -27,6 +28,7 @@
     "react-icons": "^4.11.0",
     "react-jazzicon": "^1.0.4",
     "react-toastify": "^9.1.3",
+    "solc": "^0.8.21",
     "swr": "^2.2.4",
     "yaml": "^2.3.3"
   },
