--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,8 @@
     "editor.formatOnSave": true, // optional
     "editor.formatOnSaveMode": "file", // required to format on save
     "editor.tabSize": 2,
-    "vs-code-prettier-eslint.prettierLast": false // set as "true" to run 'prettier' last not first
+    "vs-code-prettier-eslint.prettierLast": false,
+    "[solidity]": {
+        "editor.defaultFormatter": "JuanBlanco.solidity"
+    } // set as "true" to run 'prettier' last not first
 }  
