--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-toastify": "^9.1.3",
     "solc": "^0.8.21",
     "swr": "^2.2.4",
+    "web3": "^4.2.1-dev.a0d6730.0",
+    "web3-validator": "^2.0.3",
     "yaml": "^2.3.3"
   },
   "devDependencies": {
