--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nextui-org/react": "^2.1.13",
+    "@rainbow-me/rainbowkit": "^1.1.3",
     "@typescript-eslint/parser": "^6.8.0",
     "@uiw/codemirror-extensions-langs": "^4.21.20",
     "@uiw/codemirror-theme-vscode": "^4.21.20",
@@ -27,7 +28,9 @@
     "react-icons": "^4.11.0",
     "react-jazzicon": "^1.0.4",
     "react-toastify": "^9.1.3",
-    "swr": "^2.2.4"
+    "swr": "^2.2.4",
+    "viem": "^1.17.1",
+    "wagmi": "^1.4.5"
   },
   "devDependencies": {
     "@types/node": "^20",
