--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-toastify": "^9.1.3",
     "swr": "^2.2.4",
     "viem": "^1.17.1",
-    "wagmi": "^1.4.5"
+    "wagmi": "^1.4.5",
+    "web3-validator": "^2.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
