--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
     "react-icons": "^4.11.0",
     "react-jazzicon": "^1.0.4",
     "react-toastify": "^9.1.3",
+    "solc": "0.8.19",
+    "swr": "^2.2.4",
     "viem": "^1.17.1",
     "wagmi": "^1.4.5",
-    "solc": "^0.8.21",
-    "swr": "^2.2.4",
     "web3": "^4.2.1-dev.a0d6730.0",
     "web3-validator": "^2.0.3",
     "yaml": "^2.3.3"
