--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start -H 0.0.0.0 -p ${PORT:-8080}",
     "lint": "next lint",
+    "e2e:typechain": "typechain --target ethers-v6 --out-dir e2e/typechain 'e2e/abi/*.json'",
     "e2e": "NEXT_PUBLIC_PLAYWRIGHT_TESTING=true playwright test"
   },
   "dependencies": {
@@ -18,6 +19,7 @@
     "@uiw/codemirror-theme-vscode": "^4.21.20",
     "@uiw/codemirror-themes": "^4.21.20",
     "@uiw/react-codemirror": "^4.21.20",
+    "axios": "^1.6.2",
     "date-fns": "^2.30.0",
     "eslint": "^8.51.0",
     "eslint-config-next": "^13.5.6",
@@ -42,12 +44,16 @@
   "devDependencies": {
     "@playwright/test": "^1.40.1",
     "@testing-library/react": "^14.1.2",
+    "@typechain/ethers-v5": "^11.1.2",
+    "@typechain/ethers-v6": "^0.5.1",
+    "@types/axios": "^0.14.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
     "postcss": "^8",
     "tailwindcss": "^3",
+    "typechain": "^8.3.2",
     "typescript": "^5"
   }
 }
