--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10",
+    "dotenv": "^16.3.1",
     "postcss": "^8",
     "tailwindcss": "^3",
     "typechain": "^8.3.2",
